# linker

./: .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Procfile  README.md  Rocket.toml  RustConfig
.github/workflows/: rust-ci.yml
migrations/: V1__links.sql
migrations/2019-12-16-061401_create_links/: down.sql  up.sql
src/: api.rs  database.rs  db.rs  handlers.rs  main.rs  model.rs  models.rs  routes.rs  schema.rs
