[package]
authors = ["Thomas McNiven <hello@vevix.net>"]
edition = "2018"
name = "linker"
version = "0.1.0"

[dependencies]
# Web
rocket = { version = "0.4", default-features = false }
rocket_contrib = "0.4"

# Database
firestore-db-and-auth = { version = "0.5.0", default-features = false, features = ["rocket_support", "rustls-tls"] }
once_cell = "1.3.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Misc
uuid = { version = "0.8", features = ["v5"] }
seahash = "3.0"
anyhow = "1.0.26"
