[package]
authors = ["Thomas McNiven <hello@vevix.net>"]
edition = "2018"
name = "linker"
version = "0.1.0"

[dependencies]
# Web
actix-web = "2.0"
actix-rt = "1.0"

# Database
firestore-db-and-auth = { version = "0.5.0", default-features = false, features = ["rustls-tls"] }
once_cell = "1.3.1"

# Logging
env_logger = "0.7.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Misc
uuid = { version = "0.8", features = ["v5"] }
seahash = "3.0"
anyhow = "1.0.26"
