[package]
authors = ["Thomas McNiven <hello@vevix.net>"]
edition = "2018"
name = "linker"
version = "0.1.0"

[dependencies]
# Web
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", default-features = false }

# Database
tokio-postgres = "0.5.1"
deadpool = { version = "0.5.1", default-features = false, features = ["managed"] }
deadpool-postgres = { version = "0.5.5", default-features = false }
refinery = { version = "0.2.1", features = ["tokio-postgres"] }

# Logging
pretty_env_logger = "0.4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Misc
uuid = { version = "0.8", features = ["v5"] }
seahash = "3.0"
anyhow = "1.0.26"
